# etp-rs

./: .gitignore  Cargo.toml  README.md  cfg.toml.example
schema/: ENERGISTICS_LICENCE  struct.rs
schema/etp12/Datatypes/: AnyArray.avsc  AnyArrayType.avsc  AnyLogicalArrayType.avsc  AnySparseArray.avsc  AnySubarray.avsc  ArrayOfBoolean.avsc  ArrayOfBytes.avsc  ArrayOfDouble.avsc  ArrayOfFloat.avsc  ArrayOfInt.avsc  ArrayOfLong.avsc  ArrayOfNullableBoolean.avsc  ArrayOfNullableInt.avsc  ArrayOfNullableLong.avsc  ArrayOfString.avsc  AttributeMetadataRecord.avsc  Contact.avsc  DataAttribute.avsc  DataObjectCapabilityKind.avsc  DataValue.avsc  EndpointCapabilityKind.avsc  ErrorInfo.avsc  IndexValue.avsc  MessageHeader.avsc  MessageHeaderExtension.avsc  Protocol.avsc  ProtocolCapabilityKind.avsc  ServerCapabilities.avsc  SupportedDataObject.avsc  SupportedProtocol.avsc  Uuid.avsc  Version.avsc
schema/etp12/Datatypes/ChannelData/: ChannelChangeRequestInfo.avsc  ChannelDataKind.avsc  ChannelIndexKind.avsc  ChannelMetadataRecord.avsc  ChannelRangeInfo.avsc  ChannelSubscribeInfo.avsc  DataItem.avsc  FrameChannelMetadataRecord.avsc  FramePoint.avsc  FrameRow.avsc  IndexDirection.avsc  IndexMetadataRecord.avsc  OpenChannelInfo.avsc  PassDirection.avsc  PassIndexedDepth.avsc  TruncateInfo.avsc
schema/etp12/Datatypes/DataArrayTypes/: DataArray.avsc  DataArrayIdentifier.avsc  DataArrayMetadata.avsc  GetDataSubarraysType.avsc  PutDataArraysType.avsc  PutDataSubarraysType.avsc  PutUnitializedDataArrayType.avsc
schema/etp12/Datatypes/Object/: ActiveStatusKind.avsc  ChangeAnnotation.avsc  ChangeResponseInfo.avsc  ContextInfo.avsc  ContextScopeKind.avsc  DataObject.avsc  Dataspace.avsc  DeletedResource.avsc  Edge.avsc  IndexInterval.avsc  ObjectChange.avsc  ObjectChangeKind.avsc  ObjectPart.avsc  PartsMetadataInfo.avsc  PutResponse.avsc  RelationshipKind.avsc  Resource.avsc  (+2 more)
src/: error.rs  headerflags.rs  helpers.rs  lib.rs  schema.rs  schema_extensions.rs  schema_gen.rs  session.rs
(+134 files in other folders)
